test/ui/tests/parsing/outdented-bracket.stderr
error[E010]: found keyword `case` but expected word
 --> ${TEST_FOLDER}/parsing/outdented-bracket.lushui:4:23
  |
4 | lengthy-space-filler (case 0 of
  |                       ^^^^ unexpected token
  |

error: aborting due to previous error

