test/ui/tests/parsing/outdented-bracket.lushui
;;; TEST fail check
;;; @Task better error message

lengthy-space-filler (case 0 of
    \\n => n
)

